--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Service to provide pins.",
   "main": "index.ts",
   "scripts": {
-    "start": "npm run tsc && node build/index.js",
+    "start": "npx tsc && node build/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "tsc": "tsc"
   },
