--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test-this-pin-service",
+  "name": "try-this-pin-service",
   "version": "1.0.0",
   "description": "Service to provide pins.",
   "main": "index.ts",
@@ -11,15 +11,13 @@
   "author": "Jase S Naut",
   "license": "ISC",
   "dependencies": {
-    "@types/express": "^4.17.0",
-    "@types/node": "^12.6.8",
-    "body-parser": "^1.19.0",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "ejs": "^2.6.2",
-    "express": "^4.17.1",
-    "i": "^0.3.6",
-    "npm": "^6.10.2",
-    "sqlite3": "^4.2.0",
-    "typescript": "^3.5.3"
+    "express": "^4.18.2",
+    "sqlite3": "^5.1.4",
+    "typescript": "^4.9.5"
+  },
+  "devDependencies": {
+    "@types/node": "^18.14.6"
   }
 }
